Remove valueOf calls - not supported in Java 1.4
git-svn-id: https://svn.apache.org/repos/asf/incubator/tuscany/java/sdo@533219 13f79535-47bb-0310-9956-ffa450edef68